k8s/release-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lulo-chat-mc-birthday-greeting
  namespace: lulo-chat-backend-release
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lulo-chat-mc-birthday-greeting
  template:
    metadata:
      labels:
        app: lulo-chat-mc-birthday-greeting
      annotations:
        force-recreate: "1" # Add or update this annotation to trigger a rolling update
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: admin
          image: index.docker.io/qcodeco/lulo-chat-mc-birthday-greeting:TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 3004
              protocol: TCP
