k8s/release-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: lulo-chat-mc-ecommerce-payment
  namespace: lulo-chat-backend-release
spec:
  type: ClusterIP
  selector:
    app: lulo-chat-mc-ecommerce-payment
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3004
