k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juana-shop-erp-backend
  namespace: juana-shop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - api-erp.juanashop.co
      secretName: juana-shop-erp-backend-ingress-tls
  rules:
    - host: api-erp.juanashop.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: juana-shop-erp-backend
                port:
                  number: 80
